manifests/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-app
spec:
  selector:
    app: quarkus-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
