manifests/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-app
spec:
  to:
    kind: Service
    name: quarkus-app
  port:
    targetPort: 8080
  tls:
    termination: edge
